# RayTracer

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  To_do.txt  build.sh  clean.sh  compile.sh  output.ppm  raytracer
Config/: basic.cfg  basic2.cfg  basic_shapes.cfg  buggedScene.cfg  config.cfg  cow.cfg  donut.cfg  foret.cfg  miroire.cfg  nimp.cfg  pyramid.cfg  saturne.cfg  scene.cfg  scene_base.cfg  scene_light.cfg  simpleObjFile.cfg  simpleSphere.cfg  spirale.cfg  tetrahedre.cfg
bonus/: index.html  script.js  style.css
bootstrap/Points/: Point3D.cpp  Point3D.hpp
bootstrap/Rays/: Ray.cpp
bootstrap/Vectors/: Vector.cpp  Vector.hpp  Vector3D.cpp  Vector3D.hpp
docs/: index.html  script.js
src/: CMakeLists.txt  create.cpp  main.cpp
src/BVHBuilder/: AABB.cpp  AABB.hpp  BinaryTree.cpp  BinaryTree.hpp
src/Builder/: RayTracer.cpp  RayTracer.hpp
src/Builders/: ShapeBuilder.hpp
src/Builders/Plane/: PlaneBuilder.cpp  PlaneBuilder.hpp
src/Builders/Sphere/: SphereBuilder.cpp  SphereBuilder.hpp
src/Camera/: Camera.cpp  Camera.hpp
src/Decorator/: DecoratePrimitives.cpp  DecoratePrimitives.hpp  PositionedShape.hpp  ShapeDecorator.hpp
src/Display/: Rectangle3D.cpp  Rectangle3D.hpp
src/DynamicLibrary/: DynamicLibrary.cpp  DynamicLibrary.hpp
src/Interfaces/: HitInfo.hpp  ILights.hpp  IPrimitive.hpp  IShape.hpp  IShapeBuilder.hpp
src/Lights/: ALights.cpp  ALights.hpp  PointLight.cpp  PointLight.hpp
src/Lights/DirectionalLight/: CMakeLists.txt  DirectionalLight.cpp  DirectionalLight.hpp
src/Lights/PointLight/: CMakeLists.txt  PointLight.cpp  PointLight.hpp
src/Parsing/: ArgumentMap.cpp  ArgumentMap.hpp  Classes.hpp  Classes_infos.hpp  Parsing_cfg.cpp  Parsing_cfg.hpp
src/Points/: Point3D.hpp  Points.cpp  Points.hpp
src/Primitives/BoundingBox/: BoundingBox.cpp  BoundingBox.hpp  CMakeLists.txt
src/Primitives/Cone/: CMakeLists.txt  Cone.cpp  Cone.hpp
src/Primitives/Cylinder/: CMakeLists.txt  Cylinder.cpp  Cylinder.hpp
src/Primitives/Donut/: CMakeLists.txt  Donut.cpp  Donut.hpp
src/Primitives/ObjFile/: CMakeLists.txt  ObjFile.cpp  ObjFile.hpp
src/Primitives/Plane/: CMakeLists.txt  Plane.cpp  Plane.hpp
src/Primitives/Sphere/: CMakeLists.txt  Sphere.cpp  Sphere.hpp
src/Primitives/Triangle/: CMakeLists.txt  Triangle.cpp  Triangle.hpp
src/Ray/: Ray.cpp  Ray.hpp
src/Rays/: Ray.cpp  Ray.hpp
src/Rectangle3D/: Screen.cpp  Screen.hpp
src/Scene/: Scene.cpp  Scene.hpp
src/Utils/: ShapeBuilder.cpp  ShapeBuilder.hpp  ShapeLoader.cpp  ShapeLoader.hpp  utils.cpp  utils.hpp
src/Vectors/: Vector.cpp  Vector.hpp  Vector3D.cpp  Vector3D.hpp
src/Visualization/: PpmViewer.cpp  PpmViewer.hpp
